--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,9 +1,9 @@
-NAME = claptrap
+NAME = ScavTrap
 
 COMPIs = c++ -std=c++98
 ERRORS = -Wall -Wextra -Werror
 
-FILES = ClapTrap.cpp main.cpp
+FILES = ClapTrap.cpp main.cpp ScavTrap.cpp
 
 all : $(NAME)
 
