CPP03 95% of the work

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,14 +1,14 @@
 NAME = fragtrap
 
-COMPIs = c++ -std=c++98
-ERRORS = -Wall -Wextra -Werror
+CXX = c++ -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror
 
 FILES = ClapTrap.cpp main.cpp FragTrap.cpp
 
 all : $(NAME)
 
 $(NAME) : $(FILES)
-	$(COMPIs) $(ERRORS) $(FILES) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(FILES) -o $(NAME)
 
 clean :
 	rm -rf $(NAME)
@@ -16,3 +16,5 @@ clean :
 fclean : clean
 
 re : fclean all
+
+.PHONY: all clean fclean re
